fix padding on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -189,6 +189,9 @@
   .nivo-directionNav {
     display: none;
   }
+  .nivo-caption {
+    padding: 0;
+  }
   .nivoSlider{
     height:calc(100vh - 60px - 56px) !important;
     width: auto !important;
